--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 # misc
 .DS_Store
 *.pem
-
+*.env
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -27,7 +27,6 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env
 
 # vercel
 .vercel
