--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "mongoose": "^8.0.4",
     "next": "^14.0.4",
