Added to README.md

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,12 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# Ignore this to avoid API Keys while testing
+schema.prisma
+
 #Random Trash Folder
 /jas_videos
 
 #Ignore these files. Just personal note
 Project_Notes.txt
+
