--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@prisma/client": "^5.8.1",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
